allprojects {
	apply plugin: "java"

	processResources {
		inputs.property "version", version
	}

	tasks.withType(JavaCompile).configureEach {
		options.release.set(21)
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
		toolchain.languageVersion = JavaLanguageVersion.of(21)
	}

	jar {
		duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	}
}
